--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                 <p class="event received">Device is Ready</p>
             </div>
         </div>
+
+	<a href=spec.html>spec</a>
+
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
