--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <title>Hello World</title>
     </head>
     <body>
+<!--
         <div class="app">
             <h1>PhoneGap</h1>
             <div id="deviceready" class="blink">
@@ -33,13 +34,13 @@
                 <p class="event received">Device is Ready</p>
             </div>
         </div>
-
+-->
 	<a href=spec.html>spec</a>
 
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
-            app.initialize();
+           //app.initialize();
         </script>
     </body>
 </html>
