--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
 
     <p id="deviceProperties">Loading device properties...</p>
 
+<a href=camera.html>cam</a><BR><BR>
+
 <p><a href="#" onclick="showAlert(); return false;">Show Alert</a></p>
 <BR><BR>
 <p><div id=button>Show Alert 2</div></p>
